# EniRenderer

./: CMakeLists.txt  EniShader.cpp  EniShader.h  GouraudShader.cpp  Texture.cpp  Texture.hpp  main.cpp  math.cpp  math.hpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
